# child-mind-institute-detect-sleep-states-1st-place

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  tasks.py
input/folds/: stratify_fold_1.yaml  stratify_fold_2.yaml  stratify_fold_3.yaml
kami/: .gitignore
kami/run/: cv_inference.py  cv_train.py  prepare_data.py  split_folds.py
kami/run/conf/: cv_inference.yaml  cv_train.yaml  split_folds.yaml
kami/src/datamodule/: centernet.py  seg.py  seg2day.py  seg_cat.py  seg_overlap.py  seg_stride.py
kami/src/modelmodule/: seg.py  seg_cat.py
kami/src/models/: centernet.py  common.py  spec1D.py  spec2Dcnn.py  spec2Dcnn2Day.py  spec2Dcnn2DayV2.py  spec2DcnnAffine.py  spec2DcnnMinMax.py  spec2DcnnOverlap.py  spec2DcnnSplit.py  spec2DcnnSplitCat.py  specWeightAvg.py
kami/src/utils/: chokudai_search.py  detect_peak.py  metrics.py  periodicity.py  post_process.py  score.py
sakami/config/: meta.yaml
sakami/exp/: 148_gru_scale_factor.py  156_gru_transformer_residual.py  163_gru_sleep_target.py  179_gru_minute_embedding_sync.py
sakami/src/: __init__.py  config.py  detect_peak.py  metric.py  utils.py
sakami/stacking/: 004_transformer_category_padding_idx.py  011_cnn_embedding_sync.py
shimacos/: .gitignore
shimacos/components/: fast_metrics.py  metrics.py  utils.py
shimacos/components/factories/: __init__.py  callback_factory.py  collate_factory.py  dataset_factory.py  detector_factory.py  loss_factory.py  model_factory.py  module.py  optimizer_factory.py  sampler_factory.py  scheduler_factory.py  tree_factory.py
shimacos/components/preprocess/: feature_creator.py  make_fold_v2.py
shimacos/components/stacking/: 009.py  030_truncate.py  io.py  main_cat.py  main_lgbm.py  main_nn.py  runner.py
shimacos/yamls/: nn.yaml  stacking.yaml
shimacos/yamls/feature/: stacking_009.yaml  stacking_030_truncate.yaml  stacking_030_truncate_small.yaml
(+69 files in other folders)
